# pinned_shared_memory

./: CMakeLists.txt  compile.sh  compile5.7.sh  mpi_hip_pinned_shared_memory.cpp
